altv-capi/client/altv-capi.hpp


struct alt_StringView {
    const char * data;
    unsigned long long size;
};
struct alt_RGBA {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
};
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};
struct alt_IBaseObject {};
enum alt_IBaseObject_Type {
    ALT_IBASEOBJECT_TYPE_PLAYER = 0,
    ALT_IBASEOBJECT_TYPE_VEHICLE = 1,
    ALT_IBASEOBJECT_TYPE_CHECKPOINT = 2,
    ALT_IBASEOBJECT_TYPE_BLIP = 3,
    ALT_IBASEOBJECT_TYPE_WEBVIEW = 4,
    ALT_IBASEOBJECT_TYPE_VOICE_CHANNEL = 5,
    ALT_IBASEOBJECT_TYPE_COLSHAPE = 6
};
struct alt_IWorldObject {};
struct alt_IEntity {};
struct alt_IPlayer {};
CAPI unsigned short alt_IPlayer_GetMaxHealth(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetMaxHealth(struct alt_IPlayer* _instance, unsigned short health);
CAPI void alt_IPlayer_SetDateTime(struct alt_IPlayer* _instance, int day, int month, int year, int hour, int minute, int second);
CAPI void alt_IPlayer_SetWeather(struct alt_IPlayer* _instance, unsigned int weather);
CAPI void alt_IPlayer_GiveWeapon(struct alt_IPlayer* _instance, unsigned int weapon, int ammo, _Bool selectWeapon);
CAPI void alt_IPlayer_RemoveWeapon(struct alt_IPlayer* _instance, unsigned int weapon);
CAPI void alt_IPlayer_RemoveAllWeapons(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_AddWeaponComponent(struct alt_IPlayer* _instance, unsigned int weapon, unsigned int component);
CAPI void alt_IPlayer_RemoveWeaponComponent(struct alt_IPlayer* _instance, unsigned int weapon, unsigned int component);
CAPI struct alt_Array_unsignedint* alt_IPlayer_GetCurrentWeaponComponents(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetWeaponTintIndex(struct alt_IPlayer* _instance, unsigned int weapon, unsigned char tintIndex);
CAPI unsigned char alt_IPlayer_GetCurrentWeaponTintIndex(struct alt_IPlayer* _instance);
CAPI unsigned int alt_IPlayer_GetCurrentWeapon(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetCurrentWeapon(struct alt_IPlayer* _instance, unsigned int weapon);
CAPI _Bool alt_IPlayer_IsDead(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsJumping(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsInRagdoll(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsAiming(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsShooting(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsReloading(struct alt_IPlayer* _instance);
CAPI unsigned short alt_IPlayer_GetArmour(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetArmour(struct alt_IPlayer* _instance, unsigned short armor);
CAPI unsigned short alt_IPlayer_GetMaxArmour(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_SetMaxArmour(struct alt_IPlayer* _instance, unsigned short armor);
CAPI float alt_IPlayer_GetMoveSpeed(struct alt_IPlayer* _instance);
CAPI unsigned int alt_IPlayer_GetWeapon(struct alt_IPlayer* _instance);
CAPI unsigned short alt_IPlayer_GetAmmo(struct alt_IPlayer* _instance);
CAPI struct alt_Vector_float_3_PointLayout* alt_IPlayer_GetAimPos(struct alt_IPlayer* _instance);
CAPI struct alt_Vector_float_3_RotationLayout* alt_IPlayer_GetHeadRotation(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsInVehicle(struct alt_IPlayer* _instance);
CAPI struct alt_IVehicle* alt_IPlayer_GetVehicle(struct alt_IPlayer* _instance);
CAPI unsigned char alt_IPlayer_GetSeat(struct alt_IPlayer* _instance);
CAPI struct alt_IEntity* alt_IPlayer_GetEntityAimingAt(struct alt_IPlayer* _instance);
CAPI struct alt_Vector_float_3_PointLayout* alt_IPlayer_GetEntityAimOffset(struct alt_IPlayer* _instance);
CAPI _Bool alt_IPlayer_IsFlashlightActive(struct alt_IPlayer* _instance);
CAPI void alt_IPlayer_Kick(struct alt_IPlayer* _instance, struct alt_StringView* reason);
CAPI void alt_IPlayer_Assign_constIPlayerRef(struct alt_IPlayer* _instance, struct alt_IPlayer* _p0);
struct alt_IVehicle {};
CAPI enum alt_IBaseObject_Type alt_IVehicle_GetType(struct alt_IVehicle* _instance);
CAPI struct alt_MValue* alt_IVehicle_GetMetaData(struct alt_IVehicle* _instance, struct alt_StringView* key);
CAPI void alt_IVehicle_SetMetaData(struct alt_IVehicle* _instance, struct alt_StringView* key, struct alt_MValue* val);
CAPI void alt_IVehicle_Assign_constIBaseObjectRef(struct alt_IVehicle* _instance, struct alt_IBaseObject* _p0);
CAPI struct alt_Vector_float_3_PointLayout* alt_IVehicle_GetPosition(struct alt_IVehicle* _instance);
CAPI short alt_IVehicle_GetDimension(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_Assign_constIWorldObjectRef(struct alt_IVehicle* _instance, struct alt_IWorldObject* _p0);
CAPI unsigned short alt_IVehicle_GetID(struct alt_IVehicle* _instance);
CAPI unsigned int alt_IVehicle_GetModel(struct alt_IVehicle* _instance);
CAPI struct alt_Vector_float_3_RotationLayout* alt_IVehicle_GetRotation(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetRotation(struct alt_IVehicle* _instance, struct alt_Vector_float_3_RotationLayout* rot);
CAPI struct alt_MValue* alt_IVehicle_GetSyncedMetaData(struct alt_IVehicle* _instance, struct alt_StringView* key);
CAPI void alt_IVehicle_Assign_constIEntityRef(struct alt_IVehicle* _instance, struct alt_IEntity* _p0);
CAPI struct alt_IPlayer* alt_IVehicle_GetDriver(struct alt_IVehicle* _instance);
CAPI unsigned char alt_IVehicle_GetMod(struct alt_IVehicle* _instance, unsigned char category);
CAPI unsigned char alt_IVehicle_GetModsCount(struct alt_IVehicle* _instance, unsigned char category);
CAPI _Bool alt_IVehicle_SetMod(struct alt_IVehicle* _instance, unsigned char category, unsigned char id);
CAPI unsigned char alt_IVehicle_GetModKitsCount(struct alt_IVehicle* _instance);
CAPI unsigned char alt_IVehicle_GetModKit(struct alt_IVehicle* _instance);
CAPI _Bool alt_IVehicle_SetModKit(struct alt_IVehicle* _instance, unsigned char id);
CAPI _Bool alt_IVehicle_IsPrimaryColorRGB(struct alt_IVehicle* _instance);
CAPI unsigned char alt_IVehicle_GetPrimaryColor(struct alt_IVehicle* _instance);
CAPI struct alt_RGBA* alt_IVehicle_GetPrimaryColorRGB(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetPrimaryColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI void alt_IVehicle_SetPrimaryColorRGB(struct alt_IVehicle* _instance, struct alt_RGBA* color);
CAPI _Bool alt_IVehicle_IsSecondaryColorRGB(struct alt_IVehicle* _instance);
CAPI unsigned char alt_IVehicle_GetSecondaryColor(struct alt_IVehicle* _instance);
CAPI struct alt_RGBA* alt_IVehicle_GetSecondaryColorRGB(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetSecondaryColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI void alt_IVehicle_SetSecondaryColorRGB(struct alt_IVehicle* _instance, struct alt_RGBA* color);
CAPI unsigned char alt_IVehicle_GetPearlColor(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetPearlColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI unsigned char alt_IVehicle_GetWheelColor(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetWheelColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI unsigned char alt_IVehicle_GetInteriorColor(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetInteriorColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI unsigned char alt_IVehicle_GetDashboardColor(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetDashboardColor(struct alt_IVehicle* _instance, unsigned char color);
CAPI _Bool alt_IVehicle_IsTireSmokeColorCustom(struct alt_IVehicle* _instance);
CAPI struct alt_RGBA* alt_IVehicle_GetTireSmokeColor(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetTireSmokeColor(struct alt_IVehicle* _instance, struct alt_RGBA* color);
CAPI unsigned char alt_IVehicle_GetWheelType(struct alt_IVehicle* _instance);
CAPI unsigned char alt_IVehicle_GetWheelVariation(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetWheels(struct alt_IVehicle* _instance, unsigned char type, unsigned char variation);
CAPI _Bool alt_IVehicle_GetCustomTires(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetCustomTires(struct alt_IVehicle* _instance, _Bool state);
CAPI unsigned char alt_IVehicle_GetSpecialDarkness(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetSpecialDarkness(struct alt_IVehicle* _instance, unsigned char value);
CAPI unsigned int alt_IVehicle_GetNumberplateIndex(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetNumberplateIndex(struct alt_IVehicle* _instance, unsigned int index);
CAPI struct alt_StringView* alt_IVehicle_GetNumberplateText(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetNumberplateText(struct alt_IVehicle* _instance, struct alt_StringView* text);
CAPI unsigned char alt_IVehicle_GetWindowTint(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetWindowTint(struct alt_IVehicle* _instance, unsigned char tint);
CAPI unsigned char alt_IVehicle_GetDirtLevel(struct alt_IVehicle* _instance);
CAPI void alt_IVehicle_SetDirtLevel(struct alt_IVehicle* _instance, unsigned char level);