client/src/altv_capi.rs

lth : :: std :: os :: raw :: c_ushort ) ; } extern "C" { pub fn alt_IPlayer_GetMaxHealth ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_SetMaxHealth ( _instance : * mut alt_IPlayer , health : :: std :: os :: raw :: c_ushort ) ; } extern "C" { pub fn alt_IPlayer_SetDateTime ( _instance : * mut alt_IPlayer , day : :: std :: os :: raw :: c_int , month : :: std :: os :: raw :: c_int , year : :: std :: os :: raw :: c_int , hour : :: std :: os :: raw :: c_int , minute : :: std :: os :: raw :: c_int , second : :: std :: os :: raw :: c_int ) ; } extern "C" { pub fn alt_IPlayer_SetWeather ( _instance : * mut alt_IPlayer , weather : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IPlayer_GiveWeapon ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint , ammo : :: std :: os :: raw :: c_int , selectWeapon : bool ) ; } extern "C" { pub fn alt_IPlayer_RemoveWeapon ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IPlayer_RemoveAllWeapons ( _instance : * mut alt_IPlayer ) ; } extern "C" { pub fn alt_IPlayer_AddWeaponComponent ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint , component : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IPlayer_RemoveWeaponComponent ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint , component : :: std :: os :: raw :: c_uint ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Array_unsignedint { _unused : [ u8 ; 0 ] , } extern "C" { pub fn alt_IPlayer_GetCurrentWeaponComponents ( _instance : * mut alt_IPlayer ) -> * mut alt_Array_unsignedint ; } extern "C" { pub fn alt_IPlayer_SetWeaponTintIndex ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint , tintIndex : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IPlayer_GetCurrentWeaponTintIndex ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IPlayer_GetCurrentWeapon ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IPlayer_SetCurrentWeapon ( _instance : * mut alt_IPlayer , weapon : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IPlayer_IsDead ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_IsJumping ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_IsInRagdoll ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_IsAiming ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_IsShooting ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_IsReloading ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_GetArmour ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_SetArmour ( _instance : * mut alt_IPlayer , armor : :: std :: os :: raw :: c_ushort ) ; } extern "C" { pub fn alt_IPlayer_GetMaxArmour ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_SetMaxArmour ( _instance : * mut alt_IPlayer , armor : :: std :: os :: raw :: c_ushort ) ; } extern "C" { pub fn alt_IPlayer_GetMoveSpeed ( _instance : * mut alt_IPlayer ) -> f32 ; } extern "C" { pub fn alt_IPlayer_GetWeapon ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IPlayer_GetAmmo ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IPlayer_GetAimPos ( _instance : * mut alt_IPlayer ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IPlayer_GetHeadRotation ( _instance : * mut alt_IPlayer ) -> * mut alt_Vector_float_3_RotationLayout ; } extern "C" { pub fn alt_IPlayer_IsInVehicle ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_GetVehicle ( _instance : * mut alt_IPlayer ) -> * mut alt_IVehicle ; } extern "C" { pub fn alt_IPlayer_GetSeat ( _instance : * mut alt_IPlayer ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IPlayer_GetEntityAimingAt ( _instance : * mut alt_IPlayer ) -> * mut alt_IEntity ; } extern "C" { pub fn alt_IPlayer_GetEntityAimOffset ( _instance : * mut alt_IPlayer ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IPlayer_IsFlashlightActive ( _instance : * mut alt_IPlayer ) -> bool ; } extern "C" { pub fn alt_IPlayer_Kick ( _instance : * mut alt_IPlayer , reason : * mut alt_StringView ) ; } extern "C" { pub fn alt_IPlayer_Assign_constIPlayerRef ( _instance : * mut alt_IPlayer , _p0 : * mut alt_IPlayer ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_IVehicle { pub _address : u8 , } # [ test ] fn bindgen_test_layout_alt_IVehicle ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_IVehicle > ( ) , 1usize , concat ! ( "Size of: " , stringify ! ( alt_IVehicle ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_IVehicle > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_IVehicle ) ) ) ; } extern "C" { pub fn alt_IVehicle_GetType ( _instance : * mut alt_IVehicle ) -> alt_IBaseObject_Type ; } extern "C" { pub fn alt_IVehicle_GetMetaData ( _instance : * mut alt_IVehicle , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IVehicle_SetMetaData ( _instance : * mut alt_IVehicle , key : * mut alt_StringView , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_IVehicle_Assign_constIBaseObjectRef ( _instance : * mut alt_IVehicle , _p0 : * mut alt_IBaseObject ) ; } extern "C" { pub fn alt_IVehicle_GetPosition ( _instance : * mut alt_IVehicle ) -> * mut alt_Vector_float_3_PointLayout ; } extern "C" { pub fn alt_IVehicle_GetDimension ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_short ; } extern "C" { pub fn alt_IVehicle_Assign_constIWorldObjectRef ( _instance : * mut alt_IVehicle , _p0 : * mut alt_IWorldObject ) ; } extern "C" { pub fn alt_IVehicle_GetID ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_ushort ; } extern "C" { pub fn alt_IVehicle_GetModel ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IVehicle_GetRotation ( _instance : * mut alt_IVehicle ) -> * mut alt_Vector_float_3_RotationLayout ; } extern "C" { pub fn alt_IVehicle_SetRotation ( _instance : * mut alt_IVehicle , rot : * mut alt_Vector_float_3_RotationLayout ) ; } extern "C" { pub fn alt_IVehicle_GetSyncedMetaData ( _instance : * mut alt_IVehicle , key : * mut alt_StringView ) -> * mut alt_MValue ; } extern "C" { pub fn alt_IVehicle_Assign_constIEntityRef ( _instance : * mut alt_IVehicle , _p0 : * mut alt_IEntity ) ; } extern "C" { pub fn alt_IVehicle_GetDriver ( _instance : * mut alt_IVehicle ) -> * mut alt_IPlayer ; } extern "C" { pub fn alt_IVehicle_GetMod ( _instance : * mut alt_IVehicle , category : :: std :: os :: raw :: c_uchar ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_GetModsCount ( _instance : * mut alt_IVehicle , category : :: std :: os :: raw :: c_uchar ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetMod ( _instance : * mut alt_IVehicle , category : :: std :: os :: raw :: c_uchar , id : :: std :: os :: raw :: c_uchar ) -> bool ; } extern "C" { pub fn alt_IVehicle_GetModKitsCount ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_GetModKit ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetModKit ( _instance : * mut alt_IVehicle , id : :: std :: os :: raw :: c_uchar ) -> bool ; } extern "C" { pub fn alt_IVehicle_IsPrimaryColorRGB ( _instance : * mut alt_IVehicle ) -> bool ; } extern "C" { pub fn alt_IVehicle_GetPrimaryColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_GetPrimaryColorRGB ( _instance : * mut alt_IVehicle ) -> * mut alt_RGBA ; } extern "C" { pub fn alt_IVehicle_SetPrimaryColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_SetPrimaryColorRGB ( _instance : * mut alt_IVehicle , color : * mut alt_RGBA ) ; } extern "C" { pub fn alt_IVehicle_IsSecondaryColorRGB ( _instance : * mut alt_IVehicle ) -> bool ; } extern "C" { pub fn alt_IVehicle_GetSecondaryColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_GetSecondaryColorRGB ( _instance : * mut alt_IVehicle ) -> * mut alt_RGBA ; } extern "C" { pub fn alt_IVehicle_SetSecondaryColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_SetSecondaryColorRGB ( _instance : * mut alt_IVehicle , color : * mut alt_RGBA ) ; } extern "C" { pub fn alt_IVehicle_GetPearlColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetPearlColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetWheelColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetWheelColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetInteriorColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetInteriorColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetDashboardColor ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetDashboardColor ( _instance : * mut alt_IVehicle , color : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_IsTireSmokeColorCustom ( _instance : * mut alt_IVehicle ) -> bool ; } extern "C" { pub fn alt_IVehicle_GetTireSmokeColor ( _instance : * mut alt_IVehicle ) -> * mut alt_RGBA ; } extern "C" { pub fn alt_IVehicle_SetTireSmokeColor ( _instance : * mut alt_IVehicle , color : * mut alt_RGBA ) ; } extern "C" { pub fn alt_IVehicle_GetWheelType ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_GetWheelVariation ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetWheels ( _instance : * mut alt_IVehicle , type_ : :: std :: os :: raw :: c_uchar , variation : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetCustomTires ( _instance : * mut alt_IVehicle ) -> bool ; } extern "C" { pub fn alt_IVehicle_SetCustomTires ( _instance : * mut alt_IVehicle , state : bool ) ; } extern "C" { pub fn alt_IVehicle_GetSpecialDarkness ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetSpecialDarkness ( _instance : * mut alt_IVehicle , value : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetNumberplateIndex ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uint ; } extern "C" { pub fn alt_IVehicle_SetNumberplateIndex ( _instance : * mut alt_IVehicle , index : :: std :: os :: raw :: c_uint ) ; } extern "C" { pub fn alt_IVehicle_GetNumberplateText ( _instance : * mut alt_IVehicle ) -> * mut alt_StringView ; } extern "C" { pub fn alt_IVehicle_SetNumberplateText ( _instance : * mut alt_IVehicle , text : * mut alt_StringView ) ; } extern "C" { pub fn alt_IVehicle_GetWindowTint ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetWindowTint ( _instance : * mut alt_IVehicle , tint : :: std :: os :: raw :: c_uchar ) ; } extern "C" { pub fn alt_IVehicle_GetDirtLevel ( _instance : * mut alt_IVehicle ) -> :: std :: os :: raw :: c_uchar ; } extern "C" { pub fn alt_IVehicle_SetDirtLevel ( _instance : * mut alt_IVe